improved on various modules

--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/medication/admissions/add_admission.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/medication/admissions/add_admission.html
@@ -59,7 +59,34 @@
       
           </tr>
        
-           
+             <tr>
+          <td class="allif-fix-table-col">Medical File</td>
+          <td>{{form.medical_file}}</td>
+      
+          </tr>
+
+     
+             <tr>
+            <td class="allif-fix-table-col">Ward</td>
+            <td>{{form.ward}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Bed</td>
+            <td>{{form.bed}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">By Doctor</td>
+            <td>{{form.admitting_doctor}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Status</td>
+            <td>{{form.status}}</td>
+        
+            </tr>
+            
         </tbody>
         </table>
       </div>
@@ -78,12 +105,17 @@
             <td>{{form.department}}</td>
         
             </tr>
-            <tr>
-              <td class="allif-fix-table-col">Warehouse</td>
-              <td>{{form.name}}</td>
-          
-              </tr>
+          <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{form.description}}</td>
         
+            </tr>
+        <tr>
+            <td class="allif-fix-table-col">Reasons For Admission</td>
+            <td>{{form.reason_for_admission}}</td>
+        
+            </tr>
+ 
            
           </tbody>
           </table>
@@ -97,17 +129,19 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
+            <tr>
+            <td class="allif-fix-table-col">Admission Date</td>
+            <td>{{form.admission_date_time}}</td>
         
             </tr>
+           
              <tr>
-            <td class="allif-fix-table-col">Inventory A/C</td>
-            <td>{{form.inventory_account}}</td>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{form.description}}</td>
         
             </tr>
- 
+            
+          
             <tr>
               <td class="allif-fix-table-col">Action</td>
               <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
@@ -153,11 +187,7 @@
       
           </tr>
 
-        <tr>
-            <td class="allif-fix-table-col">Discharged On</td>
-            <td>{{form.discharge_date_time}}</td>
-        
-            </tr>
+     
              <tr>
             <td class="allif-fix-table-col">Ward</td>
             <td>{{form.ward}}</td>
@@ -202,27 +232,19 @@
             <td>{{form.reason_for_admission}}</td>
         
             </tr>
-             <tr>
-            <td class="allif-fix-table-col">Duration</td>
-            <td>{{form.duration}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Prescribed By</td>
-            <td>{{form.prescribed_by_doctor}}</td>
-         
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Instructions</td>
-            <td>{{form.instructions}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Issued By</td>
-            <td>{{form.issued_by_pharmacist}}</td>
+     <tr>
+            <td class="allif-fix-table-col">Admission Date</td>
+            <td>{{form.admission_date_time}}</td>
         
             </tr>
            
+             <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{form.description}}</td>
+        
+            </tr>
+            
+      
           </tbody>
           </table>
           </div>
@@ -235,32 +257,19 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
-        <tr>
-            <td class="allif-fix-table-col">Issued On</td>
-            <td>{{form.issued_date_time}}</td>
-        
-            </tr>
+       
              <tr>
-            <td class="allif-fix-table-col">Max Occupancy</td>
-            <td>{{form.max_occupancy}}</td>
+            <td class="allif-fix-table-col">Admission Date</td>
+            <td>{{form.admission_date_time}}</td>
         
             </tr>
-             <tr>
-            <td class="allif-fix-table-col">Monthly Rent</td>
-            <td>{{form.monthly_rent}}</td>
-        
-            </tr>
+           
              <tr>
             <td class="allif-fix-table-col">Description</td>
             <td>{{form.description}}</td>
         
             </tr>
-             <tr>
-            <td class="allif-fix-table-col">Status</td>
-            <td>{{form.current_status}}</td>
-        
-            </tr>
-           
+            
           
         <tr>
           <td class="allif-fix-table-col">Action</td>
