--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/medication/admissions/discharge/add_discharge.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/medication/admissions/discharge/add_discharge.html
@@ -58,7 +58,33 @@
           <td>{{form.branch}}</td>
       
           </tr>
-       
+         <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
+           <tr>
+          <td class="allif-fix-table-col">Admission</td>
+          <td>{{form.admission}}</td>
+      
+          </tr>
+
+        <tr>
+            <td class="allif-fix-table-col">Discharge Diagnosis</td>
+            <td>{{form.discharge_diagnosis}}</td>
+        
+            </tr>
+            
+             <tr>
+            <td class="allif-fix-table-col">Discharge Medication</td>
+            <td>{{form.medications_at_discharge}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Follow Up Plan</td>
+            <td>{{form.follow_up_plan}}</td>
+        
+            </tr>
            
         </tbody>
         </table>
@@ -73,18 +99,13 @@
        <table class="table table-layout">
         <tbody>
         
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
+        
+              <tr>
+            <td class="allif-fix-table-col">Discharge Notes</td>
+            <td>{{form.discharge_summary}}</td>
         
             </tr>
-            <tr>
-              <td class="allif-fix-table-col">Warehouse</td>
-              <td>{{form.name}}</td>
           
-              </tr>
-        
-           
           </tbody>
           </table>
           </div>
@@ -97,14 +118,9 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Inventory A/C</td>
-            <td>{{form.inventory_account}}</td>
+            <tr>
+            <td class="allif-fix-table-col">Discharge Date</td>
+            <td>{{form.recorded_on}}</td>
         
             </tr>
  
@@ -158,11 +174,7 @@
             <td>{{form.discharge_diagnosis}}</td>
         
             </tr>
-             <tr>
-            <td class="allif-fix-table-col">Discharge Notes</td>
-            <td>{{form.discharge_summary}}</td>
-        
-            </tr>
+            
              <tr>
             <td class="allif-fix-table-col">Discharge Medication</td>
             <td>{{form.medications_at_discharge}}</td>
@@ -171,11 +183,6 @@
              <tr>
             <td class="allif-fix-table-col">Follow Up Plan</td>
             <td>{{form.follow_up_plan}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Discharge Date</td>
-            <td>{{form.recorded_on}}</td>
         
             </tr>
             
@@ -192,37 +199,12 @@
        <div class="allif-details-card table-responsive">
        <table class="table table-layout">
         <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Dosage</td>
-            <td>{{form.dosage}}</td>
-        
-            </tr>
         <tr>
-            <td class="allif-fix-table-col">Frequency</td>
-            <td>{{form.frequency}}</td>
+            <td class="allif-fix-table-col">Discharge Notes</td>
+            <td>{{form.discharge_summary}}</td>
         
             </tr>
-             <tr>
-            <td class="allif-fix-table-col">Duration</td>
-            <td>{{form.duration}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Prescribed By</td>
-            <td>{{form.prescribed_by_doctor}}</td>
-         
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Instructions</td>
-            <td>{{form.instructions}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Issued By</td>
-            <td>{{form.issued_by_pharmacist}}</td>
-        
-            </tr>
-           
+            
           </tbody>
           </table>
           </div>
@@ -235,32 +217,12 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
-        <tr>
-            <td class="allif-fix-table-col">Issued On</td>
-            <td>{{form.issued_date_time}}</td>
+      <tr>
+            <td class="allif-fix-table-col">Discharge Date</td>
+            <td>{{form.recorded_on}}</td>
         
             </tr>
-             <tr>
-            <td class="allif-fix-table-col">Max Occupancy</td>
-            <td>{{form.max_occupancy}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Monthly Rent</td>
-            <td>{{form.monthly_rent}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{form.description}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Status</td>
-            <td>{{form.current_status}}</td>
-        
-            </tr>
-           
+            
           
         <tr>
           <td class="allif-fix-table-col">Action</td>
