--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/medication/prescriptions/add_prescription.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/medication/prescriptions/add_prescription.html
@@ -58,7 +58,38 @@
           <td>{{form.branch}}</td>
       
           </tr>
+            <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
+        <tr>
+          <td class="allif-fix-table-col">Patient</td>
+          <td>{{form.medical_file}}</td>
+      
+          </tr>
+         <tr>
+            <td class="allif-fix-table-col">Medication</td>
+            <td>{{form.medication}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Dosage From</td>
+            <td>{{form.dosage_form}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Dosage</td>
+            <td>{{form.dosage}}</td>
+        
+            </tr>
        
+             <tr>
+            <td class="allif-fix-table-col">Via</td>
+            <td>{{form.via}}</td>
+        
+            </tr>
+            
            
         </tbody>
         </table>
@@ -73,17 +104,18 @@
        <table class="table table-layout">
         <tbody>
         
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
+        
+           <tr>
+            <td class="allif-fix-table-col">Instructions</td>
+            <td>{{form.instructions}}</td>
         
             </tr>
-            <tr>
-              <td class="allif-fix-table-col">Warehouse</td>
-              <td>{{form.name}}</td>
-          
-              </tr>
+              <tr>
+            <td class="allif-fix-table-col">Quantity</td>
+            <td>{{form.quantity}}</td>
         
+            </tr>
+            
            
           </tbody>
           </table>
@@ -97,17 +129,39 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
+           <tr>
+            <td class="allif-fix-table-col">Frequency</td>
+            <td>{{form.frequency}}</td>
         
             </tr>
              <tr>
-            <td class="allif-fix-table-col">Inventory A/C</td>
-            <td>{{form.inventory_account}}</td>
+            <td class="allif-fix-table-col">Duration</td>
+            <td>{{form.duration}}</td>
         
             </tr>
- 
+           
+           <tr>
+            <td class="allif-fix-table-col">Prescribed By</td>
+            <td>{{form.prescribed_by_doctor}}</td>
+         
+            </tr>
+               <tr>
+            <td class="allif-fix-table-col">Issued By</td>
+            <td>{{form.issued_by_pharmacist}}</td>
+        
+            </tr>
+       
+           <tr>
+            <td class="allif-fix-table-col">Status</td>
+            <td>{{form.is_issued}}</td>
+        
+            </tr>
+        <tr>
+            <td class="allif-fix-table-col">Issued On</td>
+            <td>{{form.issued_date_time}}</td>
+        
+            </tr>
+
             <tr>
               <td class="allif-fix-table-col">Action</td>
               <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
@@ -134,7 +188,7 @@
 {% else %}
 
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit New General Ledger Account</div>
+  <div class="table-details-content-description">Add New Prescriptions</div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -148,27 +202,11 @@
       <table class="table table-layout">
       <tbody>
         <tr>
-          <td class="allif-fix-table-col">Medical File</td>
+          <td class="allif-fix-table-col">Patient</td>
           <td>{{form.medical_file}}</td>
       
           </tr>
-
-        <tr>
-            <td class="allif-fix-table-col">Status</td>
-            <td>{{form.is_issued}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Quantity</td>
-            <td>{{form.quantity}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Via</td>
-            <td>{{form.via}}</td>
-        
-            </tr>
-             <tr>
+         <tr>
             <td class="allif-fix-table-col">Medication</td>
             <td>{{form.medication}}</td>
         
@@ -178,8 +216,34 @@
             <td>{{form.dosage_form}}</td>
         
             </tr>
+             <tr>
+            <td class="allif-fix-table-col">Dosage</td>
+            <td>{{form.dosage}}</td>
+        
+            </tr>
+       
+             <tr>
+            <td class="allif-fix-table-col">Via</td>
+            <td>{{form.via}}</td>
+        
+            </tr>
             
-           
+             <tr>
+            <td class="allif-fix-table-col">Quantity</td>
+            <td>{{form.quantity}}</td>
+        
+            </tr>
+            
+            <tr>
+            <td class="allif-fix-table-col">Frequency</td>
+            <td>{{form.frequency}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Duration</td>
+            <td>{{form.duration}}</td>
+        
+            </tr>
         </tbody>
         </table>
       </div>
@@ -192,36 +256,13 @@
        <div class="allif-details-card table-responsive">
        <table class="table table-layout">
         <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Dosage</td>
-            <td>{{form.dosage}}</td>
         
-            </tr>
-        <tr>
-            <td class="allif-fix-table-col">Frequency</td>
-            <td>{{form.frequency}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Duration</td>
-            <td>{{form.duration}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Prescribed By</td>
-            <td>{{form.prescribed_by_doctor}}</td>
-         
-            </tr>
              <tr>
             <td class="allif-fix-table-col">Instructions</td>
             <td>{{form.instructions}}</td>
         
             </tr>
-             <tr>
-            <td class="allif-fix-table-col">Issued By</td>
-            <td>{{form.issued_by_pharmacist}}</td>
-        
-            </tr>
+          
            
           </tbody>
           </table>
@@ -235,33 +276,29 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
+         
+             <tr>
+            <td class="allif-fix-table-col">Prescribed By</td>
+            <td>{{form.prescribed_by_doctor}}</td>
+         
+            </tr>
+               <tr>
+            <td class="allif-fix-table-col">Issued By</td>
+            <td>{{form.issued_by_pharmacist}}</td>
+        
+            </tr>
+       
+           <tr>
+            <td class="allif-fix-table-col">Status</td>
+            <td>{{form.is_issued}}</td>
+        
+            </tr>
         <tr>
             <td class="allif-fix-table-col">Issued On</td>
             <td>{{form.issued_date_time}}</td>
         
             </tr>
-             <tr>
-            <td class="allif-fix-table-col">Max Occupancy</td>
-            <td>{{form.max_occupancy}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Monthly Rent</td>
-            <td>{{form.monthly_rent}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{form.description}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Status</td>
-            <td>{{form.current_status}}</td>
-        
-            </tr>
-           
-          
+
         <tr>
           <td class="allif-fix-table-col">Action</td>
           <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
